pagina de pesquisa

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -6,6 +6,12 @@
         align-items: center;
         text-align: center;
     }
+    #page-search-results .cards{
+        grid-template-columns: 1fr;
+    }
+    #page-search-results .cards img{
+        height: 250px;
+    }
     #page-home header a{
         position: absolute;
         bottom: 48px;
