--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -22,6 +22,12 @@
     #page-home main{
         align-items: center;
     }
+    #page-create-point .field-group {
+        flex-direction: column;
+    }
+    #page-create-point .field-group .field + .field {
+        margin-left: 0;
+    }
 }
 
 @media(min-width: 1700px){
