--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -7,11 +7,12 @@
 
 {% block styles %}
     <link rel="stylesheet" href="/styles/create-point.css"/>
+    <link rel="stylesheet" href="/styles/modal.css"/>
 {% endblock styles %}
 
 {% block content %}
     {% include "partials/page-header.html" %}
-    <form action="#">
+    <form action="/savepoint" method="POST" >
         <h1>Cadastro do ponto de coleta</h1>
 
         <fieldset>
@@ -74,32 +75,32 @@
             </legend>
 
             <div class="items-grid">
-                <li data-id='1'>
+                <li data-id='Lâmpadas'>
                     <img src='/assets/lampadas.svg' alt='lampadas'>
                     <span>Lâmpadas</span>
                 </li>
 
-                <li data-id='2'>
+                <li data-id='Pilhas e Baterias'>
                     <img src='/assets/baterias.svg' alt='pilhas e baterias'>
                     <span>Pilhas e Baterias</span>
                 </li>
 
-                <li data-id='3'>
+                <li data-id='Papéis e Papelão'>
                     <img src='/assets/papeis-papelao.svg' alt='papeis e papelao'>
                     <span>Papéis e Papelão</span>
                 </li>
 
-                <li data-id='4'>
+                <li data-id='Resíduos Eletrônicos'>
                     <img src='/assets/eletronicos.svg' alt='resíduos eletronicos'>
                     <span>Resíduos Eletrônicos</span>
                 </li>
 
-                <li data-id='5'>
+                <li data-id='Resíduos Orgânicos'>
                     <img src='/assets/organicos.svg' alt='resíduos organicos'>
                     <span>Resíduos Orgânicos</span>
                 </li>
 
-                <li data-id='6'>
+                <li data-id='Óleo de cozinha'>
                     <img src='/assets/oleo.svg' alt='oleo de cozinha'>
                     <span>Óleo de cozinha</span>
                 </li>
@@ -112,6 +113,13 @@
 
 {% endblock content %}
 
+
+{% block modal %}
+    {% if saved %}
+        {% include "partials/point-created.html" %}
+    {% endif %}   
+{% endblock modal %}
+
 {% block scripts %}
-    <script src="scripts/create-point.js"></script>
+    <script src="/scripts/create-point.js"></script>
 {% endblock scripts %}
